--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/hover.css" media="screen" title="no title" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="css/bootstrap.min.css">
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- <script src="javascripts/bootstrap.min.js"></script>
- <script type="text/javascript" src="javascripts/myjavascript.js">
- </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>AbhishekChowdhary</title>
   </head>
   <body>
-
-
 <!--- Navbar at bottom fixed --->
     <nav class="navbar navbar-fixed-bottom" role="navigation">
       <div class="container-fluid">
@@ -35,18 +29,16 @@
         </div>
       </div>
     </nav>
+
 <!--- Navbar at bottom fixed --->
 
 <!--- Home Page --->
-
   <div class="jumbotron" id="home">
     <h1 class="name">Hi I'm Abhishek Chowdhary.</h1>
   </div>
-
 <!--- Home Page --->
 
 <!--- About Page --->
-
   <div class="jumbotron about hvr-reveal" id="about">
     <div class="container">
       <h1 class="about-text"> Hi there!</h1>
@@ -63,59 +55,124 @@
       <div class="col-xs-3 col-md-3 col-lg-1 col-md-offset-2 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Write only code" src="http://image.flaticon.com/icons/svg/69/69084.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Music" src="http://image.flaticon.com/icons/svg/126/126508.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Flash" src="http://image.flaticon.com/icons/svg/63/63702.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Android" src="http://image.flaticon.com/icons/svg/28/28869.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Movies" src="http://image.flaticon.com/icons/svg/149/149104.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Travel" src="http://image.flaticon.com/icons/svg/185/185326.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Gaming" src="http://image.flaticon.com/icons/svg/181/181885.svg">
       </div>
-
       <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1">
         <img class="img-responsive hvr-shrink" data-toggle="tooltip" data-placement="bottom" title="Youtube" src="http://image.flaticon.com/icons/svg/56/56723.svg">
       </div>
-
-
-
-
     </div>
   </div>
-
 <!--- About Page --->
 
 <!--- Portfolio Page --->
-
-  <div class="jumbotron " id="port">
-    <h1 class="name">Portfolio</h1>
+  <div class="jumbotron hvr-reveal" id="port">
+    <div class="container">
+      <h3 class="portname">Skills</h3>
+      <hr class="line">
+      <br>
+      <p class="port-skill-text">
+        Html5 / Css3 / Javascript / Jquery / Responsive Design / Bootstrap / Java / C++ / Saas
+      </p>
+    </div>
+    <div class="container">
+      <h3 class="portname">Projects</h3>
+      <hr class="line">
+      <div class="row">
+        <div class="col-md-2 project hvr-sweep-to-top">
+         <h2>Coming Soon</h2>
+        </div>
+         <div class="col-md-2 project">
+          <h2>Coming Soon</h2>
+         </div>
+          <div class="col-md-2 project">
+           <h2>Coming Soon</h2>
+          </div>
+          <div class="col-md-2 project">
+           <h2>Coming Soon</h2>
+          </div>
+          <div class="col-md-2 project">
+           <h2>Coming Soon</h2>
+          </div>
+      </div>
+    </div>
   </div>
-
 <!--- Portfolio Page --->
 
-
 <!--- Connect Page --->
+  <div class="jumbotron hvr-reveal" id="conn">
+    <h1 class="portname">Love to help you.</h1>
+    <br>
+    <div class="container port-skill ">
+      Want to hire me then drop an email : <a class="hvr-float-shadow send" href="mailto:abhishekchowdhary1994@gmail.com">Send mail</a>
+    <br>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1 img">
+        <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba" target="_blank"><img class="img-responsive hvr-shrink" src="http://image.flaticon.com/icons/svg/34/34227.svg"></a>
+        </div>
+        <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1 img">
+        <a href="https://github.com/abhishek-chowdhary" target="_blank"><img class="img-responsive hvr-shrink" src="http://image.flaticon.com/icons/svg/24/24107.svg"></a>
+        </div>
+        <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1 img">
+        <a href="http://codepen.io/abhishekchowdhary/" target="_blank"><img class="img-responsive hvr-shrink" src="http://image.flaticon.com/icons/svg/71/71245.svg"></a>
+        </div>
+        <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1 img">
+        <a href="https://www.freecodecamp.com/abhishek-chowdhary" target="_blank"><img class="img-responsive hvr-shrink" src="http://image.flaticon.com/icons/svg/71/71368.svg"></a>
+        </div>
+        <div class="col-xs-3 col-md-1 col-lg-1 col-sm-1 img">
+        <a href="https://www.instagram.com/abhishek_chowdhary/" target="_blank"><img class="img-responsive hvr-shrink" src="http://image.flaticon.com/icons/svg/1/1394.svg"></a>
+        </div>
 
-  <div class="jumbotron " id="conn">
-    <h1 class="name">Portfolio</h1>
+    </div>
+   </div>
   </div>
-
 <!--- Connect Page --->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="javascripts/bootstrap.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+    $("#ab").click(function(){
+       $("#about").fadeIn();
+       $("#home").hide();
+       $("#port").hide();
+       $("#conn").hide();
 
+    });
+
+    $("#po").click(function(){
+       $("#port").fadeIn();
+       $("#about").hide();
+       $("#conn").hide();
+       $("#home").hide();
+    });
+
+    $("#co").click(function(){
+       $("#conn").fadeIn();
+       $("#port").hide();
+       $("#about").hide();
+       $("#home").hide();
+    });
+
+    $('[data-toggle="tooltip"]').tooltip();
+});
+
+</script>
   </body>
 </html>
