--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en">
 <head>
-<meta charset=utf-8>
 <meta http-equiv=content-type content="text/html; charset=UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel=stylesheet>
