--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 </nav>
 <div class=jumbotron id=home>
-<h1 class=name>Hi I'm Abhishek .</h1>
+<h1 class=name>Hi I'm Abhishek Chowdhary.</h1>
 </div>
 <div class="jumbotron about hvr-reveal" id=about>
 <div class=container>
