--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   </p>
 
   <div class="loveto">
-    <img src="images/youtube.svg" alt="Love Coding" title="Love Coding"/>
-    <img src="images/coding.svg" alt="Watch Youtube" title="Watch Youtube"/>
+    <img src="images/coding.svg" alt="Love Coding" title="Love Coding"/>
+    <img src="images/youtube.svg" alt="Watch Youtube" title="Watch Youtube"/>
     <img src="images/movies.svg" alt="Watch Movies" title="Watch Movies"/>
     <img src="images/game.svg" alt="Play Games" title="Play Games"/>
     <img src="images/music.svg" alt="Listen Music" title="Listen Music" />
