--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
   <div class="loveto">
     <img src="images/coding.svg" alt="Love Coding" title="Love Coding"/>
-    <img src="images/youtube.svg" alt="Watch Youtube" title="Watch Youtube"/>
     <img src="images/movies.svg" alt="Watch Movies" title="Watch Movies"/>
     <img src="images/game.svg" alt="Play Games" title="Play Games"/>
+      <img src="images/you.svg" alt="Play Games" title="Play Games"/>
     <img src="images/music.svg" alt="Listen Music" title="Listen Music" />
     <img src="images/flash.svg" alt="Watch Flash" title="Watch Flash" />
   </div>
