--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
 <div class="social" >
    <a href="https://www.instagram.com/andromobs5/"><img src="images/instagram.svg" alt="instagram"></a>
-   <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba
-"><img src="images/linkedin.svg" alt="linkedin"></a>
+   <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba"><img src="images/linked.svg" alt="instagram"></a>
+
     <span>© 2016. All Rights Reversed</span>
 </div>
 
