--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
  <div class="parallax-top">
   <!----->
-   <video  poster="images/header.jpg" muted preload autoplay loop style="z-index:-1;position:fixed;width:100%;top:50%;left:50%;transform:translate(-50%,-50%);min-height:100%;min-width:100%;width:auto;height:auto;">
+   <video  poster="images/header.jpg" muted preload autoplay  style="z-index:-1;position:fixed;width:100%;top:50%;left:50%;transform:translate(-50%,-50%);-webkit-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);min-height:100%;min-width:100%;width:auto;height:auto;">
      <source src="code.mp4" type="video/mp4">
        <source src="coding4.webm" type="video/webm">
      </video>
