--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 
   <body>
 
-
-   </video>
    <header>
       <div class="logo"></div>
      <nav>
        <ul id="tog">
-         <li><a href="#about" >About</a></li>
-         <li><a href="#portfolio" >Portfolio</a></li>
+         <li><a href="#about" id="abs">About</a></li>
+         <li><a href="#work">Portfolio</a></li>
          <li><a href="#design">Design</a></li>
          <li><a href="#contact">Contact</a></li>
        </ul>
@@ -28,32 +26,33 @@
     <div class="mobile-toggle" id="mob-tg">
       <span id="span"></span>
     </div>
-
+    <div class="mobile-nav" >
+     <ul>
+       <li><a href="#about">About</a></li>
+       <li><a href="#work">Portfolio</a></li>
+       <li><a href="#design">Design</a></li>
+       <li><a href="#contact">Contact</a></li>
+     </ul>
+    </div>
 
    </header>
 
 <!--- About Me--->
 
  <div class="parallax-top">
-  <!----->
-   <video  poster="images/header.jpg" muted preload autoplay  style="z-index:-1;position:fixed;width:100%;top:50%;left:50%;transform:translate(-50%,-50%);-webkit-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);min-height:100%;min-width:100%;width:auto;height:auto;">
-     <source src="code.mp4" type="video/mp4">
-       <source src="coding4.webm" type="video/webm">
-     </video>
-     <div class="name" style="z-index:1;">
-         <figure>
-           <img src="images/logo.svg" alt="logo"  />
-           <figcaption>Web Developer/ Web Designer/ Graphic Designer</figcaption>
-         </figure>
+   <div class="name" >
+       <figure>
+         <img src="images/logo.svg" alt="logo" />
+         <figcaption>Web Developer/ Web Designer/ Graphic Designer</figcaption>
+       </figure>
 
-      <h1>abhishek chowdhary</h1>
+    <h1>abhishek chowdhary</h1>
 
-     </div>
-
+   </div>
  </div>
 
 
- <div class="about" id="about">
+ <div class="about">
    <p>
    I am young enthusiastic web developer , who is obessed with making things on web to make people happy.
    Passionate about learning new things everyday.
@@ -71,7 +70,7 @@
 
 <!--- Portfolio--->
 
- <div class="portfolio" id="portfolio">
+ <div class="portfolio">
 
    <h1>Portfolio</h1>
 
@@ -99,17 +98,14 @@
 
 
 <!--- Design--->
- <div class="design" id="design">
+ <div class="design" >
  <h1>Design</h1>
-
  </div>
 
 
 <!---Contact--->
 <div class="parallax-bottom">
-
-
-  <div class="contact-name" id="contact">
+  <div class="contact-name">
     <h3><a href="mailto:abhishekchowdhary1994@gmail.com">Hire Me</a>
     </h3>
   </div>
@@ -120,9 +116,9 @@
 
 <div class="social">
    <a href="https://www.instagram.com/andromobs5/"><img src="images/instagram.svg" alt="instagram"></a>
-   <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba"><img src="images/linked.svg" alt="linkedin"></a>
-   <a href="https://github.com/abhishek-chowdhary"><img src="images/github.svg" alt="github"></a>
-    <span style="width:100%;background:white;margin:0;padding:0;float:right">© 2016. All Rights Reversed</span>
+   <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba"><img src="images/linked.svg" alt="instagram"></a>
+
+    <span>© 2016. All Rights Reversed</span>
 </div>
 
 <!--Scripts -->
@@ -150,16 +146,7 @@
      $('#work').click(function(){
         $('.loadings').fadeIn(500);
      });
-
-     $('li>a').on('click',function (e) {
-       e.preventDefault();
-        $("body,html").animate({
-          scrollTop: $( $(this).attr('href') ).offset().top},600);
-     });
-
   });
-
-
   </script>
   </body>
 </html>
