--- a/index.html
+++ b/index.html
@@ -75,30 +75,29 @@
 
 <!--- Portfolio--->
 
- <div class="portfolio" id="portfolio">
+   <div class="portfolio" id="portfolio">
 
-   <h1>Portfolio</h1>
+     <h1 style="color:white">Portfolio</h1>
 
-   <h3 id="skills">Skills</h3>
+     <h3 id="skills">Skills</h3>
 
-   <div class="loading">
-     Html<div class="loader1"><span>95%</span></div><br>
-     Css<div class="loader2" ><span>85%</span></div><br>
-     Javascript<div class="loader3" ><span>75%</span></div><br>
-     Responsive Design<div class="loader4" ><span>80%</span></div><br>
-     Bootstrap<div class="loader5" ><span>60%</span></div><br>
-     Scss<div class="loader6" ><span>40%</span></div><br>
-     Java<div class="loader7" ><span>50%</span></div><br>
-     C++<div class="loader8" ><span>50%</span></div><br>
-   </div>
+     <div class="loading">
+       Html<div class="loader1"><span>95%</span></div><br>
+       Css<div class="loader2" ><span>85%</span></div><br>
+       Javascript<div class="loader3" ><span>75%</span></div><br>
+       Responsive Design<div class="loader4" ><span>80%</span></div><br>
+       Bootstrap<div class="loader5" ><span>60%</span></div><br>
+       Scss<div class="loader6" ><span>40%</span></div><br>
+       Java<div class="loader7" ><span>50%</span></div><br>
+       C++<div class="loader8" ><span>50%</span></div><br>
+     </div>
 
-   <h3 id="work">Work</h3>
+     <h3 id="work">Work</h3>
 
-    <div class="loadings">
-      Coming Soon
-    </div>
-
- </div>
+      <div class="loadings">
+        Coming Soon
+      </div>
+     </div>
 
 
 
@@ -112,12 +111,12 @@
 <!---Contact--->
 <div class="parallax-bottom">
 
-
+<a href="mailto:abhishekchowdhary1994@gmail.com" style="text-decoration:none">
   <div class="contact-name" id="contact">
-    <h3><a href="mailto:abhishekchowdhary1994@gmail.com">Hire Me</a>
+    <h3>Hire Me
     </h3>
   </div>
-
+</a>
 </div>
 
 <!--Social--->
@@ -129,7 +128,7 @@
     <span >© 2016. All Rights Reversed</span>
 </div>
 
-<!--Scripts  style="width:100%;background:white;margin:0;padding:0;float:right" -->
+<!--Scripts -->
 
 <script type="text/javascript" src="javascripts/jquery-3.1.0.js">
 
