--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
 
@@ -44,7 +45,7 @@
      <source src="code.ogg" type="video/ogg">
      </video>
   --->
-     <div class="name" style="z-index:1;">
+     <div class="name" >
          <figure>
            <img src="images/logo.svg" alt="logo"  />
            <figcaption>Web Developer/ Web Designer/ Graphic Designer</figcaption>
@@ -75,7 +76,7 @@
 
 <!--- Portfolio--->
 
-   <div class="portfolio" id="portfolio">
+   <div class="portfolio gradient-pattern" id="portfolio">
 
      <h1 style="color:white">Portfolio</h1>
 
@@ -117,6 +118,7 @@
     </h3>
   </div>
 </a>
+
 </div>
 
 <!--Social--->
