--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
 
     <title>Abhishek Chowdhary</title>
-    </style>
   </head>
-
   <body>
 
-
-   </video>
-   <header>
+  <header>
       <div class="logo"></div>
      <nav>
-       <ul id="tog">
+       <ul id="tog" >
          <li><a href="#about" >About</a></li>
          <li><a href="#portfolio" >Portfolio</a></li>
          <li><a href="#design">Design</a></li>
@@ -48,10 +44,11 @@
      <div class="name" >
          <figure>
            <img src="images/logo.svg" alt="logo"  />
-           <figcaption>Web Developer/ Web Designer/ Graphic Designer</figcaption>
-         </figure>
 
-      <h1>abhishek chowdhary</h1>
+
+           <figcaption>Web Developer/Web Designer/Graphic Designer</figcaption>
+         </figure>
+   <h1>abhishek chowdhary</h1>
 
      </div>
 
@@ -130,6 +127,8 @@
     <span >© 2016. All Rights Reversed</span>
 </div>
 
+
+
 <!--Scripts -->
 
 <script type="text/javascript" src="javascripts/jquery-3.1.0.js">
@@ -142,16 +141,17 @@
      });
      $('#skills').click(function(){
         $('.loading').fadeIn(500);
-        $('.loader1').animate({width:'95%',opacity:'1'},'slow').delay(1000);
-        $('.loader2').animate({width:'85%',opacity:'1'},'slow').delay(2000);
-        $('.loader3').animate({width:'75%',opacity:'0.9'},'slow').delay(3000);
-        $('.loader4').animate({width:'80%',opacity:'0.9'},'slow').delay(4000);
-        $('.loader5').animate({width:'60%',opacity:'0.8'},'slow').delay(5000);
-        $('.loader6').animate({width:'40%',opacity:'0.8'},'slow').delay(6000);
-        $('.loader7').animate({width:'50%',opacity:'0.7'},'slow').delay(7000);
-        $('.loader8').animate({width:'50%',opacity:'0.7'},'slow').delay(8000);
+        $('.loader1').animate({width:'95%',opacity:'1'},1150);
+        $('.loader2').animate({width:'85%',opacity:'1'},1200);
+        $('.loader3').animate({width:'75%',opacity:'0.9'},1500);
+        $('.loader4').animate({width:'80%',opacity:'0.9'},1700);
+        $('.loader5').animate({width:'60%',opacity:'0.8'},1900);
+        $('.loader6').animate({width:'40%',opacity:'0.8'},2100);
+        $('.loader7').animate({width:'50%',opacity:'0.7'},2400);
+        $('.loader8').animate({width:'50%',opacity:'0.7'},2700);
 
       });
+
      $('#work').click(function(){
         $('.loadings').fadeIn(500);
      });
@@ -159,8 +159,21 @@
      $('li>a').on('click',function (e) {
        e.preventDefault();
         $("body,html").animate({
-          scrollTop: $( $(this).attr('href') ).offset().top},600);
+          scrollTop: $( $(this).attr('href') ).offset().top},1800);
      });
+
+
+     if($(window).width() >= 1024)
+     {
+       $('nav').css({display:'none'});
+       $('.logo').css({display:'none'});
+        $('nav').slideDown(2000);
+        $('.logo').fadeIn(2000);
+
+       $('.name>h1').css({marginTop:'-5000px'});
+       $('.name>h1').animate({marginTop:'0px'},2000);
+
+     }
 
   });
 
