--- a/index.html
+++ b/index.html
@@ -34,18 +34,10 @@
 <!--- About Me--->
 
  <div class="parallax-top">
-  <!---   style="z-index:-1;position:fixed;width:100%;top:50%;left:50%;transform:translate(-50%,-50%);-webkit-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);min-height:100%;min-width:100%;width:auto;height:auto;"
-   <video  poster="images/header.jpg" muted autoplay >
-     <source src="code.m4v" type="video/mp4">
-     <source src="coding4.webm" type="video/webm">
-     <source src="code.ogg" type="video/ogg">
-     </video>
-  --->
+
      <div class="name" >
          <figure>
            <img src="images/logo.svg" alt="logo"  />
-
-
            <figcaption>Web Developer/Web Designer/Graphic Designer</figcaption>
          </figure>
    <h1>abhishek chowdhary</h1>
@@ -93,17 +85,32 @@
      <h3 id="work">Work</h3>
 
       <div class="loadings">
-        Coming Soon
+        Coming Soon 🕶
       </div>
      </div>
 
 
 
 <!--- Design--->
- <div class="design" id="design">
- <h1>Design</h1>
+<div class="design" id="design">
 
- </div>
+    <div >
+      <h1>Design</h1>
+      <img src="images/1.jpg" alt="" />
+      <img src="images/2.jpg" alt="" />
+      <img src="images/3.jpg" alt="" />
+      <img src="images/9.jpg" alt="" />
+      <img src="images/14.jpg" alt="" />
+      <img src="images/15.jpg" alt="" />
+
+      <img src="images/6.jpg" alt="" />
+      <img src="images/12.jpg" alt="" />
+
+        <img src="images/10.jpg" alt="" />
+        <figcaption><a href="#">View More</a></figcaption>
+
+    </div>
+</div>
 
 
 <!---Contact--->
@@ -172,8 +179,10 @@
 
        $('.name>h1').css({marginTop:'-5000px'});
        $('.name>h1').animate({marginTop:'0px'},2000);
+       $('.name>figure').css({display:'none'});
+       $('.name>figure').fadeIn(2000);
 
-     }
+    }
 
   });
 
