--- a/index.html
+++ b/index.html
@@ -1,192 +1,338 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-
-    <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
-
-    <title>Abhishek Chowdhary</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/master.css" media="screen" title="no title">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
+  <title>Abhishek Chowdhary</title>
   <body>
 
   <header>
-      <div class="logo"></div>
-     <nav>
-       <ul id="tog" >
-         <li><a href="#about" >About</a></li>
-         <li><a href="#portfolio" >Portfolio</a></li>
-         <li><a href="#design">Design</a></li>
-         <li><a href="#contact">Contact</a></li>
-       </ul>
-       <a href="mailto:abhishekchowdhary1994@gmail.com">✉email</a>
-     </nav>
-
-    <div class="mobile-toggle" id="mob-tg">
-      <span id="span"></span>
-    </div>
-
-
-   </header>
-
-<!--- About Me--->
-
- <div class="parallax-top">
-
-     <div class="name" >
-         <figure>
-           <img src="images/logo.svg" alt="logo"  />
-           <figcaption>Web Developer/Web Designer/Graphic Designer</figcaption>
-         </figure>
-   <h1>abhishek chowdhary</h1>
-
-     </div>
-
- </div>
-
-
- <div class="about" id="about">
-   <p>
-   I am young enthusiastic web developer , who is obessed with making things on web to make people happy.
-   Passionate about learning new things everyday.
-  </p>
-
-  <div class="loveto">
-    <img src="images/coding.svg" alt="Love Coding" title="Love Coding"/>
-    <img src="images/movies.svg" alt="Watch Movies" title="Watch Movies"/>
-    <img src="images/game.svg" alt="Play Games" title="Play Games"/>
-      <img src="images/you.svg" alt="Play Games" title="Play Games"/>
-    <img src="images/music.svg" alt="Listen Music" title="Listen Music" />
-    <img src="images/flash.svg" alt="Watch Flash" title="Watch Flash" />
-  </div>
-</div>
-
-<!--- Portfolio--->
-
-   <div class="portfolio gradient-pattern" id="portfolio">
-
-     <h1 style="color:white">Portfolio</h1>
-
-     <h3 id="skills">Skills</h3>
-
-     <div class="loading">
-       Html<div class="loader1"><span>95%</span></div><br>
-       Css<div class="loader2" ><span>85%</span></div><br>
-       Javascript<div class="loader3" ><span>75%</span></div><br>
-       Responsive Design<div class="loader4" ><span>80%</span></div><br>
-       Bootstrap<div class="loader5" ><span>60%</span></div><br>
-       Scss<div class="loader6" ><span>40%</span></div><br>
-       Java<div class="loader7" ><span>50%</span></div><br>
-       C++<div class="loader8" ><span>50%</span></div><br>
-     </div>
-
-     <h3 id="work">Work</h3>
-
-      <div class="loadings">
-        Coming Soon 🕶
+    <nav class="navbar navbar-default navbar-fixed-top ">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-target="#mynav" data-toggle="collapse" class="navbar-toggle">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html" class="navbar-brand">Abhishek Chowdhary</a>
+        </div>
+        <div class="collapse navbar-collapse" id="mynav">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">want to know about me</a></li>
+            <li><a href="#">see my work</a></li>
+            <li><a href="#">connect or hire me</a></li>
+          </ul>
+        </div>
       </div>
-     </div>
+    </nav>
+  </header>
+
+  <section>
+    <div class="jumbotron heads">
+      <h1 class="text-center">Hi ! there.</h1>
+    </div>
+  </section>
+
+  <section>
+    <div class="jumbotron about">
+      <div class="container">
+        <h1 class="text-center"><u>about me.</u></h1>
+        <br>
+        <h2 class="text-center"> &lt; Developer / Designer / Gamer &gt; </h2>
+        <br>
+        <div class="row text-center" >
+          <div class="col-lg-10 col-lg-offset-1">
+            <h2>
+              I am young enthusiastic web developer , who is obessed with making things on web to make people happy. Passionate about learning new things everyday.
+            </h2>
+          </div>
+          <div class="col-lg-12 ">
+            <h2 class="text-center"><strong><u> my skills </u></strong></h2>
+            <br>
+            <br>
+            <div class="container">
+              <div class="row">
+
+                <div class="col-lg-3">
+                  <p>HTML</p>
+                </div>
+                <div class="col-lg-8 ">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-success progress-bar-striped active 1" role="progressbar" >
+                    <p> 90% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>CSS</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-success progress-bar-striped active 2" role="progressbar" >
+                    <p> 85% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>SCSS</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-info progress-bar-striped active 3" role="progressbar" >
+                    <p> 80% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>RESPONSIVE DESIGN</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-info progress-bar-striped active 4" role="progressbar" >
+                    <p> 80% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>JAVASCRIPT</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-warning progress-bar-striped active 5" role="progressbar"  >
+                    <p> 70% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>BOOTSTRAP</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-warning progress-bar-striped active 6" role="progressbar" >
+                    <p> 70% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>JAVA</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-danger progress-bar-striped active 7" role="progressbar" >
+                    <p> 50% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>C++</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-danger progress-bar-striped active 8" role="progressbar" >
+                    <p> 50% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="jumbotron work">
+      <div class="container-fluid">
+        <h1 class="text-center"><u><strong>work.</strong></u></h1>
+          <div class="row text-center">
+            <br><br><br>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <img src="images/cardboard.jpg" class="img-responsive img-thumbnail" alt="" />
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <h2>Virtual Reality Game</h2>
+            <br>
+            <br>
+            <p>
+              Developed a virtual reality first person shooter game.Implemented using Unity 3d and C#.
+              Uses head tracking for motion and game controller for shooting.
+            </p>
+          </div>
+
+          <div class="clearfix"></div>
+            <br><br>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+             <br>
+            <h2>LAN Intrusion Detection System</h2>
+            <br>
+            <br>
+            <p>
+               Develop a desktop application for detection of intrusion and other activities.
+               Impelmented using Eclipse Ide and Java.
+               <br>
+               <br>
+               <strong>Features:</strong><br><br>
+               Pendrive detection <br>
+               Screen Mirroring
+            </p>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <img src="images/lan.png" class="img-responsive img-thumbnail" alt="" />
+          </div>
+            <div class="clearfix"></div>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <br><br><br>
+            <img src="images/rest.jpg" class="img-responsive img-thumbnail" alt="" />
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <br><br><br>
+            <h2>Online Table Booking System</h2>
+            <br>
+            <br>
+            <p>
+              Developed a table booking system using Jsp/Servlets and Eclipse Ide.
+              Website for searching different restaurant and view their menu,location,photos,review.
+              User can sign up for writing their review or give rating on any restaurant or view other users review.
+
+            </p>
+          </div>
+          <div class="clearfix"> </div>
+          <br><br>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <br>
+            <h2>Network Monitoring System</h2>
+            <br>
+            <br>
+            <p>
+               Develop a desktop application for monitoring the network.
+               Impelmented using Eclipse Ide and Java.
+               <br>
+               <br>
+            </p>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <img src="images/net.png" class="img-responsive img-thumbnail" alt="" />
+          </div>
+            <div class="clearfix"></div>
+
+        </div>
+      </div>
+    </div>
+  </section>
 
 
+<section>
+  <div class="jumbotron design">
+    <div class="container text-center">
+       <h1 class="text-center"><strong><u>designs.</u></strong></h1>
+       <br><br><br>
+        <div class="row">
 
-<!--- Design--->
-<div class="design" id="design">
+          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/3.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
 
-    <div >
-      <h1>Design</h1>
-      <img src="images/1.jpg" alt="" />
-      <img src="images/2.jpg" alt="" />
-      <img src="images/3.jpg" alt="" />
-      <img src="images/9.jpg" alt="" />
-      <img src="images/14.jpg" alt="" />
-      <img src="images/15.jpg" alt="" />
 
-      <img src="images/6.jpg" alt="" />
-      <img src="images/12.jpg" alt="" />
+          <div class="col-lg-3  col-md-3 col-sm-3 " style="background:url('images/14.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
 
-        <img src="images/10.jpg" alt="" />
-        <figcaption><a href="https://www.instagram.com/andromobs5/">View More</a></figcaption>
+
+          <div class="col-lg-3 col-md-3  col-sm-3 " style="background:url('images/5.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+          <div class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1 " style="background:url('images/16.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+          <div class="col-lg-3  col-md-3 col-sm-3 " style="background:url('images/9.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+
+          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/11.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+
+          <div class="col-lg-3 col-lg-offset-2 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2" style="background:url('images/8.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+
+          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/13.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+
+          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/15.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+        </div>
+          <br><br>
+          <h4><a href="https://www.instagram.com/andromobs5/" target="_blank">View more designs</a></h4>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="jumbotron down">
+    <div class="container">
+      <h2 class="text-center"><strong>Let's build something awesome today.</strong></h2>
+      <br>
+        <div class="row text-center">
+          <div class="col-lg-6 col-lg-offset-3">
+            <p>If you have a new project or want to know more about Web Stuff or Gaming. Let me know, i’d love to help.</p>
+          </div>
+          <div class="clearfix"></div>
+          <div class="col-lg-6 col-lg-offset-3">
+            <a href="mailto:abhishekchowdhary1994@gmail.com" class="btn btn-lg">✉ Drop me a mail :) </a>
+
+          </div>
+        </div>
+    </div>
+  </div>
+
+  <div class="jumbotron container connect">
+    <div class="row">
+
+      <a href="https://www.instagram.com/andromobs5/" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="background:url('images/insta.svg');height:100px;background-size:contain;background-repeat:no-repeat;background-position:center;">
+      </div></a>
+
+      <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="background:url('images/link.svg');height:100px;background-size:contain;background-repeat:no-repeat;background-position:center;">
+      </div></a>
+
+      <a href="https://github.com/abhishek-chowdhary" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="background:url('images/git.svg');height:100px;background-size:contain;background-repeat:no-repeat;background-position:center;">
+      </div></a>
 
     </div>
-</div>
-
-
-<!---Contact--->
-<div class="parallax-bottom">
-
-<a href="mailto:abhishekchowdhary1994@gmail.com" style="text-decoration:none">
-  <div class="contact-name" id="contact">
-    <h3>Hire Me
-    </h3>
   </div>
-</a>
 
-</div>
-
-<!--Social--->
-
-<div class="social">
-   <a href="https://www.instagram.com/andromobs5/"><img src="images/instagram.svg" alt="instagram"></a>
-   <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba"><img src="images/linked.svg" alt="linkedin"></a>
-   <a href="https://github.com/abhishek-chowdhary"><img src="images/github.svg" alt="github"></a>
-    <span >© 2016. All Rights Reversed</span>
-</div>
+  <p class="text-center text-primary"> © 2016.All Rights Reversed</p>
+</section>
 
 
-
-<!--Scripts -->
-
-<script type="text/javascript" src="javascripts/jquery-3.1.0.js">
-
-</script>
-  <script type="text/javascript">
-  $(function() {
-     $('#mob-tg').click(function(){
-        $('#tog').toggle();
-     });
-     $('#skills').click(function(){
-        $('.loading').fadeIn(500);
-        $('.loader1').animate({width:'95%',opacity:'1'},1150);
-        $('.loader2').animate({width:'85%',opacity:'1'},1200);
-        $('.loader3').animate({width:'75%',opacity:'0.9'},1500);
-        $('.loader4').animate({width:'80%',opacity:'0.9'},1700);
-        $('.loader5').animate({width:'60%',opacity:'0.8'},1900);
-        $('.loader6').animate({width:'40%',opacity:'0.8'},2100);
-        $('.loader7').animate({width:'50%',opacity:'0.7'},2400);
-        $('.loader8').animate({width:'50%',opacity:'0.7'},2700);
-
-      });
-
-     $('#work').click(function(){
-        $('.loadings').fadeIn(500);
-     });
-
-     $('li>a').on('click',function (e) {
-       e.preventDefault();
-        $("body,html").animate({
-          scrollTop: $( $(this).attr('href') ).offset().top},1800);
-     });
-
-
-     if($(window).width() >= 1024)
-     {
-       $('nav').css({display:'none'});
-       $('.logo').css({display:'none'});
-        $('nav').slideDown(2000);
-        $('.logo').fadeIn(2000);
-
-       $('.name>h1').css({marginTop:'-5000px'});
-       $('.name>h1').animate({marginTop:'0px'},2000);
-       $('.name>figure').css({display:'none'});
-       $('.name>figure').fadeIn(2000);
-
-    }
-
-  });
-
-
-  </script>
+  <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="javascript/master.js"></script>
   </body>
 </html>
