--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </header>
 
   <section>
-    <div class="jumbotron heads">
-      <h1 class="text-center">Hi ! there.</h1>
+      <div class="jumbotron heads">
+        <h1 class="text-center">Hi ! there.</h1>
     </div>
   </section>
 
@@ -166,11 +166,11 @@
         <h1 class="text-center"><u><strong>work.</strong></u></h1>
           <div class="row text-center">
             <br><br><br>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
             <img src="images/cardboard.jpg" class="img-responsive img-thumbnail" alt="" />
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
             <h2>Virtual Reality Game</h2>
             <br>
             <br>
@@ -183,7 +183,7 @@
           <div class="clearfix"></div>
             <br><br>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
              <br>
             <h2>LAN Intrusion Detection System</h2>
             <br>
@@ -199,17 +199,17 @@
             </p>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <img src="images/lan.png" class="img-responsive img-thumbnail" alt="" />
           </div>
             <div class="clearfix"></div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <br><br><br>
             <img src="images/rest.jpg" class="img-responsive img-thumbnail" alt="" />
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <br><br><br>
             <h2>Online Table Booking System</h2>
             <br>
@@ -224,7 +224,7 @@
           <div class="clearfix"> </div>
           <br><br>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <br>
             <h2>Network Monitoring System</h2>
             <br>
@@ -237,7 +237,7 @@
             </p>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <img src="images/net.png" class="img-responsive img-thumbnail" alt="" />
           </div>
             <div class="clearfix"></div>
