--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
         <h1 class="text-center"><u><strong>work.</strong></u></h1>
           <div class="row text-center">
             <br><br><br>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <img src="images/cardboard.jpg" class="img-responsive img-thumbnail" alt="" />
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <h2>Virtual Reality Game</h2>
             <br>
             <br>
@@ -183,7 +183,7 @@
           <div class="clearfix"></div>
             <br><br>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
              <br>
             <h2>LAN Intrusion Detection System</h2>
             <br>
@@ -255,37 +255,37 @@
        <br><br><br>
         <div class="row">
 
-          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/3.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/3.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
 
-          <div class="col-lg-3  col-md-3 col-sm-3 " style="background:url('images/14.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3  col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/14.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
 
-          <div class="col-lg-3 col-md-3  col-sm-3 " style="background:url('images/5.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-md-3  col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/5.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
-          <div class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1 " style="background:url('images/16.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-lg-offset-1 col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1 col-xs-4 col-xs-offset-0" style="background:url('images/16.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
-          <div class="col-lg-3  col-md-3 col-sm-3 " style="background:url('images/9.jpg');height:200px;background-position:center;background-size:cover;">
-          </div>
-
-
-          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/11.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3  col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/9.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
 
-          <div class="col-lg-3 col-lg-offset-2 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2" style="background:url('images/8.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/11.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
 
-          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/13.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-lg-offset-2 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-4 col-xs-offset-0" style="background:url('images/8.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
 
-          <div class="col-lg-3 col-md-3 col-sm-3 " style="background:url('images/15.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/13.jpg');height:200px;background-position:center;background-size:cover;">
+          </div>
+
+
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/15.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
         </div>
