--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           </div>
           <div class="clearfix"></div>
           <div class="col-lg-6 col-lg-offset-3">
-            <a href="mailto:abhishekchowdhary1994@gmail.com" class="btn btn-lg">✉ Drop me a mail :) </a>
+            <a href="mailto:abhishekchowdhary1994@gmail.com" class="btn btn-lg"><span class="glyphicon glyphicon-envelope"></span> Drop me a mail :) </a>
 
           </div>
         </div>
