--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title">
+    <link rel="stylesheet" href="css/animate.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <title>Abhishek Chowdhary</title>
   <body>
 
   <header>
-    <nav class="navbar navbar-default navbar-fixed-top ">
+    <nav class="navbar navbar-default  ">
       <div class="container">
         <div class="navbar-header">
           <button type="button" data-target="#mynav" data-toggle="collapse" class="navbar-toggle">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
           </button>
-          <a href="index.html" class="navbar-brand">Abhishek Chowdhary</a>
+          <a href="index.html" class="navbar-brand ">Abhishek Chowdhary</a>
         </div>
         <div class="collapse navbar-collapse" id="mynav">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">want to know about me</a></li>
-            <li><a href="#">see my work</a></li>
-            <li><a href="#">connect or hire me</a></li>
+            <li><a href="#about">want to know about me</a></li>
+            <li><a href="#work">see my work</a></li>
+            <li><a href="#connect">connect or hire me</a></li>
           </ul>
         </div>
       </div>
@@ -38,7 +40,7 @@
   </section>
 
   <section>
-    <div class="jumbotron about">
+    <div class="jumbotron about" id="about">
       <div class="container">
         <h1 class="text-center"><u>about me.</u></h1>
         <br>
@@ -161,16 +163,16 @@
   </section>
 
   <section>
-    <div class="jumbotron work">
+    <div class="jumbotron work" id="work" >
       <div class="container-fluid">
         <h1 class="text-center"><u><strong>work.</strong></u></h1>
           <div class="row text-center">
             <br><br><br>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutLeft" id='vr'>
             <img src="images/cardboard.jpg" class="img-responsive img-thumbnail" alt="" />
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 " >
             <h2>Virtual Reality Game</h2>
             <br>
             <br>
@@ -199,12 +201,12 @@
             </p>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutRight" id="lan">
             <img src="images/lan.png" class="img-responsive img-thumbnail" alt="" />
           </div>
             <div class="clearfix"></div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutLeft" id="rest">
             <br><br><br>
             <img src="images/rest.jpg" class="img-responsive img-thumbnail" alt="" />
           </div>
@@ -237,7 +239,7 @@
             </p>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutRight" id="net">
             <img src="images/net.png" class="img-responsive img-thumbnail" alt="" />
           </div>
             <div class="clearfix"></div>
@@ -255,7 +257,7 @@
        <br><br><br>
         <div class="row">
 
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-xs-offset-0" style="background:url('images/3.jpg');height:200px;background-position:center;background-size:cover;">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-xs-offset-0 " style="background:url('images/3.jpg');height:200px;background-position:center;background-size:cover;">
           </div>
 
 
@@ -296,7 +298,7 @@
 </section>
 
 <section>
-  <div class="jumbotron down">
+  <div class="jumbotron down" id="connect">
     <div class="container">
       <h2 class="text-center"><strong>Let's build something awesome today.</strong></h2>
       <br>
@@ -316,13 +318,13 @@
   <div class="jumbotron container connect">
     <div class="row">
 
-      <a href="https://www.instagram.com/andromobs5/" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="background:url('images/insta.svg');height:75px;background-size:contain;background-repeat:no-repeat;background-position:center;">
+      <a href="https://www.instagram.com/andromobs5/" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 animated infinite pulse" style="background:url('images/insta.svg');height:75px;background-size:contain;background-repeat:no-repeat;background-position:center;">
       </div></a>
 
-      <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="background:url('images/link.svg');height:75px;background-size:contain;background-repeat:no-repeat;background-position:center;">
+      <a href="https://in.linkedin.com/in/abhishek-chowdhary-a44b55ba" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 animated infinite pulse" style="background:url('images/link.svg');height:75px;background-size:contain;background-repeat:no-repeat;background-position:center;">
       </div></a>
 
-      <a href="https://github.com/abhishek-chowdhary" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="background:url('images/git.svg');height:75px;background-size:contain;background-repeat:no-repeat;background-position:center;">
+      <a href="https://github.com/abhishek-chowdhary" target="_blank"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 animated infinite pulse" style="background:url('images/git.svg');height:75px;background-size:contain;background-repeat:no-repeat;background-position:center;">
       </div></a>
 
     </div>
