--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="row text-center">
             <br><br><br>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutLeft" id='vr'>
-            <img src="images/cardboard.jpg" class="img-responsive img-thumbnail" alt="" />
+            <img src="images/cardboard.jpg" class="img-responsive img-thumbnail" alt="vr" />
           </div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 " >
@@ -202,13 +202,13 @@
           </div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutRight" id="lan">
-            <img src="images/lan.png" class="img-responsive img-thumbnail" alt="" />
+            <img src="images/lan.png" class="img-responsive img-thumbnail" alt="lan intursion detection" />
           </div>
             <div class="clearfix"></div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutLeft" id="rest">
             <br><br><br>
-            <img src="images/rest.jpg" class="img-responsive img-thumbnail" alt="" />
+            <img src="images/rest.jpg" class="img-responsive img-thumbnail" alt="restaurant boking website" />
           </div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
@@ -240,7 +240,7 @@
           </div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeOutRight" id="net">
-            <img src="images/net.png" class="img-responsive img-thumbnail" alt="" />
+            <img src="images/net.png" class="img-responsive img-thumbnail" alt="network monitoring system" />
           </div>
             <div class="clearfix"></div>
 
