updated about me and skills

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
       <div class="container">
         <h1 class="text-center"><u>about me.</u></h1>
         <br>
-        <h2 class="text-center"> &lt; Developer / Designer / Gamer &gt; </h2>
+        <h2 class="text-center"> &lt; DevOps / Cloud / Designer / Gamer &gt; </h2>
         <br>
         <div class="row text-center" >
           <div class="col-lg-10 col-lg-offset-1">
-            <h2>
-              I am young enthusiastic web developer , who is obessed with making things on web to make people happy. Passionate about learning new things everyday.
+            <h2>          
+              My name is Abhishek Chowdhary and I'm a Cloud DevOps engineer. I'm from India, living in New Delhi and currently working at Fidelity International Ltd.
+              I am having total experience of 3.8 years in IT industry with strong domain and hands-on experienced in Containerisation, CI/CD using Git/Jenkins, confguration management and container orchestration using Kubernetes.
             </h2>
           </div>
           <div class="col-lg-12 ">
@@ -60,11 +61,23 @@
               <div class="row">
 
                 <div class="col-lg-3">
-                  <p>HTML</p>
+                  <p>CI/CD tools - Jenkins / Checkmarx / Sonarqube</p>
                 </div>
                 <div class="col-lg-8 ">
                   <div class="progress">
                    <div class="progress-bar progress-bar-success progress-bar-striped active 1" role="progressbar" >
+                    <p> 100% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p>Configuration management & IaC - Ansible / Terraform / Cloudformation</p>
+                </div>
+                <div class="col-lg-8">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-success progress-bar-striped active 2" role="progressbar" >
                     <p> 90% </p>
                    </div>
                   </div>
@@ -72,19 +85,7 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>CSS</p>
-                </div>
-                <div class="col-lg-8">
-                  <div class="progress">
-                   <div class="progress-bar progress-bar-success progress-bar-striped active 2" role="progressbar" >
-                    <p> 85% </p>
-                   </div>
-                  </div>
-                </div>
-                <div class="clearfix"> </div>
-
-                <div class="col-lg-3">
-                  <p>SCSS</p>
+                  <p>Scripting - Python / Shell</p>
                 </div>
                 <div class="col-lg-8">
                   <div class="progress">
@@ -96,7 +97,7 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>RESPONSIVE DESIGN</p>
+                  <p>Logging/Monitoring - Cloudwatch / ELK</p>
                 </div>
                 <div class="col-lg-8">
                   <div class="progress">
@@ -108,7 +109,7 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>JAVASCRIPT</p>
+                  <p>Containerisation - Docker / Kubernetes / ECS / EKS</p>
                 </div>
                 <div class="col-lg-8">
                   <div class="progress">
@@ -120,7 +121,7 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>BOOTSTRAP</p>
+                  <p>Cloud - AWS / Azure</p>
                 </div>
                 <div class="col-lg-8">
                   <div class="progress">
@@ -132,7 +133,7 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>JAVA</p>
+                  <p>Operating System - Linux / Ubuntu / Redhat</p>
                 </div>
                 <div class="col-lg-8">
                   <div class="progress">
@@ -144,7 +145,7 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>C++</p>
+                  <p>VCS and artifactory - Gitlab / Bitbucket / Nexus</p>
                 </div>
                 <div class="col-lg-8">
                   <div class="progress">
