updated about me and skills

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </nav>
   </header>
 
-  <section>
+  <!-- <section>
       <div class="jumbotron heads">
         <h1 class="text-center">Hi ! there.</h1>
     </div>
-  </section>
+  </section> -->
 
   <section>
     <div class="jumbotron about" id="about">
@@ -53,7 +53,7 @@
               I am having total experience of 3.8 years in IT industry with strong domain and hands-on experienced in Containerisation, CI/CD using Git/Jenkins, confguration management and container orchestration using Kubernetes.
             </h2>
           </div>
-          <div class="col-lg-12 ">
+          <div class="col-lg-12">
             <h2 class="text-center"><strong><u> my skills </u></strong></h2>
             <br>
             <br>
@@ -61,7 +61,7 @@
               <div class="row">
 
                 <div class="col-lg-3">
-                  <p>CI/CD tools - Jenkins / Checkmarx / Sonarqube</p>
+                  <p><b>CI/CD tools </b> - Jenkins / Checkmarx / Sonarqube</p>
                 </div>
                 <div class="col-lg-8 ">
                   <div class="progress">
